<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.ChemPlan.Initial"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <argument
            android:name="factorsCount"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.ChemPlan.FactorForm"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_ResultsFragment"
            app:destination="@id/ResultsFragment" />

    </fragment>
    <fragment
        android:id="@+id/ResultsFragment"
        android:name="com.example.ChemPlan.SamplesForm"
        android:label="@string/results_fragment_label"
        tools:layout="@layout/sample_form">

        <action
            android:id="@+id/action_ResultsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

    </fragment>
</navigation>