<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FactorForm">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:text="@string/add_measurement_header"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/factorName"
                android:text="@string/factor_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/factorName"
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="1"
                android:textSize="14sp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loverFactorLevelTextView"
                    android:layout_width="227dp"
                    android:layout_height="25dp"
                    android:text="@string/lover_factor_level"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/minFactor"
                    android:layout_width="159dp"
                    android:layout_height="25dp"
                    android:background="@android:color/holo_blue_dark"
                    android:inputType="text"
                    android:text="1"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/middleFactorLevelTextView"
                    android:layout_width="226dp"
                    android:layout_height="25dp"
                    android:text="@string/middle_factor_level"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/middleFactor"
                    android:layout_width="155dp"
                    android:layout_height="25dp"
                    android:background="@android:color/holo_blue_dark"
                    android:inputType="text"
                    android:text="2"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="16dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="227dp"
                    android:layout_height="25dp"
                    android:text="@string/upper_factor_level"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/maxFactor"
                    android:layout_width="155dp"
                    android:layout_height="25dp"
                    android:background="@android:color/holo_blue_dark"
                    android:inputType="text"
                    android:text="3"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>