<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SamplesForm">
    <TextView
        android:id="@+id/samples_header"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="План (матрица) эксперимента"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/samples_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TableLayout
        android:id="@+id/samples_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/samples_header">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                tools:context=".Initial">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/cardview_shadow_start_color"
                    android:text="№"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/factor_list"
                    android:name="com.example.medcalc.ItemFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layoutManager="LinearLayoutManager"
                    tools:context=".SamplesForm"
                    tools:layout_editor_absoluteX="6dp"
                    tools:layout_editor_absoluteY="25dp"
                    tools:listitem="@layout/factor_item"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/cardview_shadow_start_color"
                    android:text="Результат"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </LinearLayout>
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/samples"
            android:name="com.example.medcalc.ItemFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:context=".SamplesForm"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="25dp"
            tools:listitem="@layout/sample_list">
        </androidx.recyclerview.widget.RecyclerView>
    </TableLayout>
    <Button
        android:id="@+id/button_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/randomize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/samples_table" />
    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_random" />

    <Button
        android:id="@+id/button_export"
        android:layout_width="185dp"
        android:layout_height="53dp"
        android:text="@string/export"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>